Add API v1 finance_overview endpoint
